docs(pool): prepare cancellable acquisition release 2.5.0
Refs #22; bbottema/simple-java-mail#726